--- a/index.html
+++ b/index.html
@@ -38,79 +38,28 @@
               <div class="add-and-search"><img class="add" src="./images/add.svg" alt="search"></div>
               <div class="add-and-search "><img class="search" src="./images/search.svg" alt="search"></div>
             </div>
+            <div class="add-message hidden"></div>
+            <div class="search-message hidden"></div>
+            
+              
             <form class="add-and-search-section submit-bar flex-btwn hidden">
               <input type="text" required placeholder="Add your note here.." class="add-note hidden input">
               <input type="submit" value="Submit" class="submit-btn hidden input">
             </form>
             <div class="add-and-search-section search-bar flex-btwn hidden">
               <input type="text" placeholder="Search" class="search-note hidden input">
-              <img class="loupe hidden" src="./images/loupe.svg" alt="search">
+              <img class="clear-loupe hidden" src="./images/clear-loupe.svg" alt="search">
+              <img class="color-clear-loupe hidden" src="./images/color-clear-loupe.svg" alt="search">
+              <!-- <img class="loupe hidden" src="./images/loupe.svg" alt="search"> -->
+              <!-- <span class="close-modal">&times;</span> -->
             </div>
             <div class="greeting">
-              <p>Good Morning, James!</p>
+              <p>Good Morning, <span class="user-name"></span> !</p>
               <p class="date">27th Feb, 2020</p>
             </div>
           </div>
-          <div class="note-list">
-            <div class="note flex">
-              <!-- <div class="checked-icon"> -->
-              <img class="checked-icon hidden" src="./images/checked.svg" alt="">
-              <img class="unchecked-icon" src="./images/unchecked.svg" alt="">
-              <!-- </div> -->
-              <p class="task">Arrange a weekly dfg.<span class="line-through hidden"></span> </p>
-              <!-- <div class="edit-icon"> -->
-              <img class="color-edit-icon hidden" src="./images/color-edit.svg" alt="">
-              <img class="edit-icon hidden" src="./images/edit.svg" alt="">
-              <!-- </div> -->
-              <!-- <div class="delete-icon"> -->
-              <img class="delete-icon hidden" src="./images/delete.svg" alt="">
-              <!-- </div> -->
-              <!-- <div class="hov-delete-icon"> -->
-              <img class="red-delete-icon hidden" src="./images/red-delete.svg" alt="">
-
-              <!-- </div> -->
-            </div>
-
-            <div class="note flex">
-              <!-- <div class="checked-icon"> -->
-              <img class="checked-icon hidden" src="./images/checked.svg" alt="">
-              <img class="unchecked-icon" src="./images/unchecked.svg" alt="">
-              <!-- </div> -->
-              <p class="task">qwefadsvdfbnrgh.<span class="line-through hidden"></span> </p>
-              <!-- <div class="edit-icon"> -->
-              <img class="color-edit-icon hidden" src="./images/color-edit.svg" alt="">
-              <img class="edit-icon hidden" src="./images/edit.svg" alt="">
-              <!-- </div> -->
-              <!-- <div class="delete-icon"> -->
-              <img class="delete-icon hidden" src="./images/delete.svg" alt="">
-              <!-- </div> -->
-              <!-- <div class="hov-delete-icon"> -->
-              <img class="red-delete-icon hidden" src="./images/red-delete.svg" alt="">
-
-              <!-- </div> -->
-            </div>
-            <div class="note flex">
-              <!-- <div class="checked-icon"> -->
-              <img class="checked-icon hidden" src="./images/checked.svg" alt="">
-              <img class="unchecked-icon" src="./images/unchecked.svg" alt="">
-              <!-- </div> -->
-              <p class="task">tyujndaegerth.<span class="line-through hidden"></span> </p>
-              <!-- <div class="edit-icon"> -->
-              <img class="color-edit-icon hidden" src="./images/color-edit.svg" alt="">
-              <img class="edit-icon hidden" src="./images/edit.svg" alt="">
-              <!-- </div> -->
-              <!-- <div class="delete-icon"> -->
-              <img class="delete-icon hidden" src="./images/delete.svg" alt="">
-              <!-- </div> -->
-              <!-- <div class="hov-delete-icon"> -->
-              <img class="red-delete-icon hidden" src="./images/red-delete.svg" alt="">
-
-              <!-- </div> -->
-            </div>
-
-
-            <img src="" alt="">
-          </div>
+          <div class="note-list"></div>
+          <div class="notes-message hidden"></div>
         </div>
       </div>
 
