--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
             <div class="add-message hidden"></div>
             <div class="search-message hidden"></div>
-            
-              
+
+
             <form class="add-and-search-section submit-bar flex-btwn hidden">
               <input type="text" required placeholder="Add your note here.." class="add-note hidden input">
               <input type="submit" value="Submit" class="submit-btn hidden input">
@@ -58,10 +58,17 @@
               <p class="date">27th Feb, 2020</p>
             </div>
           </div>
-          <div class="note-list"></div>
+          <div class="note-list">
+            <div class="note flex"><img class="checked-icon hidden" src="./images/checked.svg" alt=""><img
+                class="unchecked-icon" src="./images/unchecked.svg" alt="">
+              <p class="task">sfbsvsdfbsf<span class="line-through hidden"></span></p><img
+                class="color-edit-icon hidden" src="./images/color-edit.svg" alt=""><img class="edit-icon hidden"
+                src="./images/edit.svg" alt=""><img class="delete-icon hidden" src="./images/delete.svg" alt=""><img
+                class="red-delete-icon hidden" src="./images/red-delete.svg" alt="">
+            </div>
+          </div>
           <div class="notes-message hidden"></div>
         </div>
-      </div>
 
     </section>
 
@@ -95,6 +102,10 @@
     </div>
     <div class="overlay hidden"></div>
   </main>
+
+
+
+
   <script src="script.js"></script>
 </body>
 
