--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             </div>
           </div>
           <div class="note-list">
-            <div class="note flex"><img class="checked-icon hidden" src="./images/checked.svg" alt=""><img
+            <!-- <div class="note flex"><img class="checked-icon hidden" src="./images/checked.svg" alt=""><img
                 class="unchecked-icon" src="./images/unchecked.svg" alt="">
               <p class="task">sfbsvsdfbsf<span class="line-through hidden"></span></p><img
                 class="color-edit-icon hidden" src="./images/color-edit.svg" alt=""><img class="edit-icon hidden"
                 src="./images/edit.svg" alt=""><img class="delete-icon hidden" src="./images/delete.svg" alt=""><img
                 class="red-delete-icon hidden" src="./images/red-delete.svg" alt="">
-            </div>
+            </div> -->
           </div>
           <div class="notes-message hidden"></div>
         </div>
