--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
             </div>
 
             <form class="add-and-search-section submit-bar flex-btwn hidden">
-              <input type="text" required placeholder="Add your note here.." class="add-note hidden input">
+              <input type="text" required placeholder="Add your note here.." class="submit-input hidden input"
+                spellcheck="true">
               <input type="submit" value="Submit" class="submit-btn hidden input">
             </form>
 
             <div class="add-and-search-section search-bar flex-btwn hidden">
-              <input type="text" placeholder="Search" class="search-note hidden input">
+              <input type="text" placeholder="Search" class="search-input hidden input">
               <img class="clear-loupe hidden" src="./images/clear-loupe.svg" alt="search">
               <img class="color-clear-loupe hidden" src="./images/color-clear-loupe.svg" alt="search">
             </div>
