--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
               <p class="date">27th Feb, 2020</p>
             </div>
           </div>
-          <div class="note-list"></div>
-          <div class="notes-message hidden"></div>
-          <div class="search-message hidden"></div>
+          <div class="notes-section">
+            <div class="note-list"></div>
+            <div class="notes-message hidden"></div>
+            <div class="search-message hidden"></div>
+          </div>
         </div>
 
     </section>
